--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@privy-io/react-auth": "^1.93.0",
     "@privy-io/server-auth": "^1.16.1",
     "@privy-io/wagmi": "^0.2.12",
+    "@privy-io/wagmi-connector": "^0.1.13",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -23,6 +24,8 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@solana/web3.js": "^1.95.4",
     "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query-devtools": "^4.36.1",
+    "@uidotdev/usehooks": "^2.4.1",
     "@uploadthing/react": "^7.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
