--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.5",
+    "@apollo/experimental-nextjs-app-support": "^0.11.3",
     "@coinbase/onchainkit": "^0.33.5",
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
@@ -17,20 +19,29 @@
     "@privy-io/wagmi": "^0.2.12",
     "@privy-io/wagmi-connector": "^0.1.13",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@solana/web3.js": "^1.95.4",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "@tanstack/react-table": "^8.20.5",
     "@uidotdev/usehooks": "^2.4.1",
     "@uploadthing/react": "^7.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.456.0",
     "moment": "^2.30.1",
     "next": "15.0.3",
@@ -49,6 +60,7 @@
     "wagmi": "^2.12.29"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
